--- a/programs/bpf/rust/ro_modify/Cargo.toml
+++ b/programs/bpf/rust/ro_modify/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "solana-bpf-rust-ro-modify"
-version = "1.5.0"
+version = "1.3.24"
 description = "Solana BPF test program written in Rust"
 authors = ["Solana Maintainers <maintainers@solana.foundation>"]
 repository = "https://github.com/solana-labs/solana"
@@ -9,7 +9,11 @@ homepage = "https://solana.com/"
 edition = "2018"
 
 [dependencies]
-solana-program = { path = "../../../../sdk/program", version = "1.5.0" }
+solana-sdk = { path = "../../../../sdk/", version = "1.3.24", default-features = false }
+
+[features]
+program = ["solana-sdk/program"]
+default = ["program", "solana-sdk/default"]
 
 [lib]
 crate-type = ["cdylib"]
