--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -20,7 +20,7 @@ default = [
     "chrono",
     "curve25519-dalek",
     "generic-array",
-    "memmap",
+    "memmap2",
     "rand",
     "rand_chacha",
     "serde_json",
@@ -45,7 +45,7 @@ hex = "0.4.2"
 hmac = "0.7.0"
 itertools = { version = "0.9.0" }
 log = { version = "0.4.8" }
-memmap = { version = "0.7.0", optional = true }
+memmap2 = { version = "0.1.0", optional = true }
 num-derive = { version = "0.3" }
 num-traits = { version = "0.2" }
 pbkdf2 = { version = "0.3.0", default-features = false }
