--- a/banks-client/Cargo.toml
+++ b/banks-client/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 async-trait = "0.1.36"
 bincode = "1.3.1"
 futures = "0.3"
+mio = "0.7.6"
 solana-banks-interface = { path = "../banks-interface", version = "1.3.24" }
 solana-sdk = { path = "../sdk", version = "1.3.24" }
 tarpc = { version = "0.21.0", features = ["full"] }
