--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://solana.com/"
 clap = "2.33.1"
 chrono = { version = "0.4.11", features = ["serde"] }
 console = "0.11.3"
+core_affinity = "0.5.10"
 log = "0.4.8"
 rand = "0.7.0"
 serde_json = "1.0.56"
