--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -11,8 +11,9 @@ edition = "2018"
 [dependencies]
 bincode = "1.3.1"
 byteorder = "1.3.4"
-bytes = "0.4"
+bytes = "0.6"
 clap = "2.33"
+futures = "0.3"
 log = "0.4.11"
 serde = "1.0.112"
 serde_derive = "1.0.103"
@@ -22,8 +23,8 @@ solana-logger = { path = "../logger", version = "1.6.0" }
 solana-metrics = { path = "../metrics", version = "1.6.0" }
 solana-sdk = { path = "../sdk", version = "1.6.0" }
 solana-version = { path = "../version", version = "1.6.0" }
-tokio = "0.1"
-tokio-codec = "0.1"
+tokio = { version = "0.3", features = ["full"] }
+tokio-util = { version = "0.5.1", features = ["codec"] }
 
 [lib]
 crate-type = ["lib"]
