--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -78,7 +78,7 @@ tempfile = "3.1.0"
 thiserror = "1.0"
 tokio = { version = "1.1", features = ["full"] }
 tokio_02 = { version = "0.2", package = "tokio", features = ["full"] }
-tokio-util = { version = "0.3", features = ["codec"] }
+tokio-util = { version = "0.3", features = ["codec"] } # This crate needs to stay in sync with tokio_02, until that dependency can be removed
 solana-rayon-threadlimit = { path = "../rayon-threadlimit", version = "1.6.0" }
 trees = "0.2.1"
 
