--- a/net-utils/Cargo.toml
+++ b/net-utils/Cargo.toml
@@ -11,6 +11,8 @@ edition = "2018"
 [dependencies]
 bincode = "1.3.1"
 clap = "2.33.1"
+crossbeam-channel = "0.4"
+lazy_static = "1.4.0"
 log = "0.4.11"
 nix = "0.19.0"
 rand = "0.7.0"
@@ -20,8 +22,12 @@ socket2 = "0.3.17"
 solana-clap-utils = { path = "../clap-utils", version = "1.6.0" }
 solana-logger = { path = "../logger", version = "1.6.0" }
 solana-version = { path = "../version", version = "1.6.0" }
+thiserror = "1.0"
 tokio = { version = "1.1", features = ["full"] }
 url = "2.1.1"
+
+[features]
+mock-udp = []
 
 [lib]
 name = "solana_net_utils"
