--- a/streamer/Cargo.toml
+++ b/streamer/Cargo.toml
@@ -18,6 +18,7 @@ solana-logger = { path = "../logger", version = "1.6.0" }
 libc = "0.2.81"
 nix = "0.19.0"
 solana-perf = { path = "../perf", version = "1.6.0" }
+solana-net-utils = { path = "../net-utils", version = "1.6.0" }
 
 [dev-dependencies]
 
@@ -27,3 +28,6 @@ name = "solana_streamer"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[features]
+mock-udp = []
