--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -21,4 +21,5 @@ solana-logger = { path = "../logger", version = "1.5.6" }
 solana-program = { path = "../sdk/program", version = "1.5.6" }
 solana-runtime = { path = "../runtime", version = "1.5.6" }
 solana-sdk = { path = "../sdk", version = "1.5.6" }
+thiserror = "1.0"
 tokio = { version = "0.3.5", features = ["full"] }
