program-test: Add warp tests for rent and stake rewards (#15136)
* program-test Add rent collection and stake rewards

* Improve tests to initialize vote state

* Update comment

* Update program-test/src/lib.rs

Co-authored-by: Michael Vines <mvines@gmail.com>

* Review feedback

* cargo fmt

* Avoid using hard-coded slots in tests

* Make genesis_config private

Co-authored-by: Michael Vines <mvines@gmail.com>

--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -21,5 +21,9 @@ solana-logger = { path = "../logger", version = "1.5.6" }
 solana-program = { path = "../sdk/program", version = "1.5.6" }
 solana-runtime = { path = "../runtime", version = "1.5.6" }
 solana-sdk = { path = "../sdk", version = "1.5.6" }
+solana-vote-program = { path = "../programs/vote", version = "1.5.6" }
 thiserror = "1.0"
 tokio = { version = "0.3.5", features = ["full"] }
+
+[dev-dependencies]
+solana-stake-program = { path = "../programs/stake", version = "1.5.6" }
