--- a/gossip/Cargo.toml
+++ b/gossip/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Solana Maintainers <maintainers@solana.foundation>"]
 edition = "2018"
-name = "solana-gossip"
+name = "safecoin-gossip"
 description = "Blockchain, Rebuilt for Scale"
 version = "1.6.0"
 repository = "https://github.com/solana-labs/solana"
