--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 authors = ["Solana Maintainers <maintainers@solana.foundation>"]
 edition = "2018"
-name = "solana-validator"
+name = "safecoin-validator"
 description = "Blockchain, Rebuilt for Scale"
 version = "1.6.0"
 repository = "https://github.com/solana-labs/solana"
 license = "Apache-2.0"
 homepage = "https://solana.com/"
-default-run = "solana-validator"
+default-run = "safecoin-validator"
 
 [dependencies]
 base64 = "0.12.3"
