--- a/net-shaper/Cargo.toml
+++ b/net-shaper/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["Solana Maintainers <maintainers@solana.foundation>"]
 edition = "2018"
 name = "solana-net-shaper"
-description = "The solana cluster network shaping tool"
+description = "The safecoin cluster network shaping tool"
 version = "1.6.0"
 repository = "https://github.com/solana-labs/solana"
 license = "Apache-2.0"
