--- a/sys-tuner/Cargo.toml
+++ b/sys-tuner/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["Solana Maintainers <maintainers@solana.foundation>"]
 edition = "2018"
 name = "solana-sys-tuner"
-description = "The solana cluster system tuner daemon"
+description = "The safecoin cluster system tuner daemon"
 version = "1.6.0"
 repository = "https://github.com/solana-labs/solana"
 license = "Apache-2.0"
