--- a/stake-o-matic/Cargo.toml
+++ b/stake-o-matic/Cargo.toml
@@ -4,7 +4,7 @@ description = "I will find you and I will stake you"
 edition = "2018"
 homepage = "https://solana.com/"
 license = "Apache-2.0"
-name = "solana-stake-o-matic"
+name = "safecoin-stake-o-matic"
 repository = "https://github.com/solana-labs/stake-o-matic"
 version = "1.6.0"
 
