--- a/storage-bigtable/build-proto/Cargo.toml
+++ b/storage-bigtable/build-proto/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 authors = ["Solana Maintainers <maintainers@solana.com>"]
-description = "Blockchain, Rebuilt for Scale"
+description = "Safecoin: Enterprise Security for the Community by the Community"
 edition = "2018"
 homepage = "https://solana.com/"
 license = "Apache-2.0"
