--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -44,6 +44,7 @@ rand_chacha = "0.2.2"
 raptorq = "1.4.2"
 rayon = "1.4.1"
 regex = "1.3.9"
+retain_mut = "0.1.2"
 rustversion = "1.0.4"
 serde = "1.0.118"
 serde_bytes = "0.11"
