--- a/web3.js/package.json
+++ b/web3.js/package.json
@@ -94,7 +94,7 @@
     "node-fetch": "^2.6.1",
     "rpc-websockets": "^7.4.2",
     "secp256k1": "^4.0.2",
-    "superstruct": "^0.8.3",
+    "superstruct": "^0.14.2",
     "tweetnacl": "^1.0.0"
   },
   "devDependencies": {
@@ -102,7 +102,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "@babel/preset-flow": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.16",
     "@babel/register": "^7.12.13",
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/travis-cli": "^11.0.0",
@@ -113,6 +113,7 @@
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-replace": "^2.3.4",
+    "@rollup/plugin-typescript": "^8.1.1",
     "@solana/spl-token": "^0.0.13",
     "@types/node": "^14.14.26",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
@@ -153,7 +154,7 @@
     "semantic-release": "^17.0.2",
     "sinon": "^9.2.4",
     "start-server-and-test": "^1.12.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.1.5",
     "watch": "^1.0.2"
   }
 }
