--- a/web3.js/package.json
+++ b/web3.js/package.json
@@ -113,9 +113,10 @@
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-replace": "^2.3.4",
-    "@rollup/plugin-typescript": "^8.1.1",
     "@solana/spl-token": "^0.0.13",
+    "@types/bs58": "^4.0.1",
     "@types/node": "^14.14.26",
+    "@types/node-fetch": "^2.5.8",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "babel-eslint": "^11.0.0-beta.2",
