--- a/web3.js/tsconfig.json
+++ b/web3.js/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "esnext",
     "allowJs": true,
     "skipLibCheck": true,
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -11,11 +14,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmitOnError": true,
+    "outDir": "lib/types",
     "baseUrl": "src",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/index.ts", "src/connection.ts", "src/agent-manager.ts"]
 }
