--- a/web3.js/package.json
+++ b/web3.js/package.json
@@ -25,7 +25,7 @@
   },
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
   "browserslist": [
     "defaults",
     "not IE 11",
@@ -106,6 +106,8 @@
     "@babel/register": "^7.12.13",
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/travis-cli": "^11.0.0",
+    "@microsoft/api-documenter": "^7.12.7",
+    "@microsoft/api-extractor": "^7.13.1",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-babel": "^5.2.3",
     "@rollup/plugin-commonjs": "^17.1.0",
@@ -113,7 +115,9 @@
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-replace": "^2.3.4",
+    "@rollup/plugin-typescript": "^8.1.1",
     "@solana/spl-token": "^0.0.13",
+    "@types/bn.js": "^5.1.0",
     "@types/bs58": "^4.0.1",
     "@types/node": "^14.14.26",
     "@types/node-fetch": "^2.5.8",
@@ -155,6 +159,7 @@
     "semantic-release": "^17.0.2",
     "sinon": "^9.2.4",
     "start-server-and-test": "^1.12.0",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.5",
     "watch": "^1.0.2"
   }
