upgrade crate for security

--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -16,7 +16,7 @@ chrono-humanize = "0.1.1"
 crossbeam-channel = "0.4"
 dlopen_derive = "0.1.4"
 dlopen = "0.1.8"
-ed25519-dalek = "1.0.0-pre.4"
+ed25519-dalek = "1.0.1"
 fs_extra = "1.1.0"
 futures = "0.3.8"
 futures-util = "0.3.5"
@@ -26,8 +26,8 @@ libc = "0.2.81"
 log = { version = "0.4.11" }
 num_cpus = "1.13.0"
 prost = "0.7.0"
-rand = "0.7.0"
-rand_chacha = "0.2.2"
+rand = "0.8.3"
+rand_chacha = "0.3.0"
 rayon = "1.5.0"
 reed-solomon-erasure = { version = "4.0.2", features = ["simd-accel"] }
 serde = "1.0.122"
