--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -23,7 +23,7 @@ byteorder = "1.3.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 core_affinity = "0.5.10"
 crossbeam-channel = "0.4"
-ed25519-dalek = "=1.0.0-pre.4"
+ed25519-dalek = "1.0.1"
 fs_extra = "1.1.0"
 flate2 = "1.0"
 indexmap = { version = "1.5", features = ["rayon"] }
@@ -40,7 +40,7 @@ miow = "0.2.2"
 net2 = "0.2.37"
 num-traits = "0.2"
 rand = "0.7.0"
-rand_chacha = "0.2.2"
+rand_chacha = "0.3.0"
 raptorq = "1.4.2"
 rayon = "1.5.0"
 regex = "1.3.9"
