--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -25,6 +25,7 @@ full = [
     "memmap2",
     "rand",
     "rand_chacha",
+    "rand_core",
     "serde_json",
     "ed25519-dalek",
     "solana-logger",
@@ -41,7 +42,7 @@ bs58 = "0.3.1"
 bv = { version = "0.11.1", features = ["serde"] }
 byteorder = { version = "1.3.4", optional = true }
 chrono = { version = "0.4", optional = true }
-curve25519-dalek = { version = "2.1.0", optional = true }
+curve25519-dalek = { version = "3.0.2", optional = true }
 generic-array = { version = "0.14.3", default-features = false, features = ["serde", "more_lengths"], optional = true }
 hex = "0.4.2"
 hmac = "0.10.1"
@@ -52,15 +53,16 @@ memmap2 = { version = "0.1.0", optional = true }
 num-derive = "0.3"
 num-traits = "0.2"
 pbkdf2 = { version = "0.6.0", default-features = false }
-rand = { version = "0.7.0", optional = true }
-rand_chacha = { version = "0.2.2", optional = true }
+rand = { version = "0.7.3", optional = true }
+rand_core = { version = "0.6.2", optional = true }
+rand_chacha = { version = "0.3.0", optional = true }
 serde = "1.0.122"
 serde_bytes = "0.11"
 serde_derive = "1.0.103"
 serde_json = { version = "1.0.56", optional = true }
 sha2 = "0.9.2"
 thiserror = "1.0"
-ed25519-dalek = { version = "=1.0.0-pre.4", optional = true }
+ed25519-dalek = { version = "=1.0.1", optional = true }
 solana-crate-features = { path = "../crate-features", version = "1.6.0", optional = true }
 solana-logger = { path = "../logger", version = "1.6.0", optional = true }
 solana-frozen-abi = { path = "../frozen-abi", version = "1.6.0" }
@@ -73,7 +75,7 @@ sha3 = { version = "0.9.1", optional = true }
 digest = { version = "0.9.0", optional = true }
 
 [dev-dependencies]
-curve25519-dalek = "2.1.0"
+curve25519-dalek = "3.0.2"
 tiny-bip39 = "0.7.0"
 
 [build-dependencies]
