--- a/web3.js/package.json
+++ b/web3.js/package.json
@@ -74,7 +74,7 @@
     "pretty": "prettier --check '{,{examples,src,test}/**/}*.{j,t}s'",
     "pretty:fix": "prettier --write '{,{examples,src,test}/**/}*.{j,t}s'",
     "re": "semantic-release --repository-url git@github.com:solana-labs/solana-web3.js.git",
-    "test": "npm run build:fixtures && mocha './test/**/*.test.js'",
+    "test": "mocha './test/**/*.test.js'",
     "test:cover": "nyc --reporter=lcov mocha './test/**/*.test.js'",
     "test:browser": "TEST_LIVE=1 npm run build:fixtures && npm run build:browser-test && mocha-headless-chrome -f http://localhost:8080/mocha.html --timeout 180000",
     "test:browser-with-server": "start-server-and-test 'http-server -p 8080' 8080 test:browser",
@@ -94,7 +94,7 @@
     "node-fetch": "^2.6.1",
     "rpc-websockets": "^7.4.2",
     "secp256k1": "^4.0.2",
-    "superstruct": "^0.8.3",
+    "superstruct": "^0.14.2",
     "tweetnacl": "^1.0.0"
   },
   "devDependencies": {
