--- a/perf/Cargo.toml
+++ b/perf/Cargo.toml
@@ -21,6 +21,7 @@ solana-sdk = { path = "../sdk", version = "1.5.11" }
 solana-rayon-threadlimit = { path = "../rayon-threadlimit", version = "1.5.11" }
 solana-budget-program = { path = "../programs/budget", version = "1.5.11" }
 solana-logger = { path = "../logger", version = "1.5.11" }
+solana-measure = { path = "../measure", version = "1.5.11" }
 solana-metrics = { path = "../metrics", version = "1.5.11" }
 curve25519-dalek = { version = "2" }
 
