--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -54,12 +54,14 @@ thiserror = "1.0"
 tokio = { version = "0.3", features = ["full"] }
 trees = "0.2.1"
 
+
 [dependencies.rocksdb]
 # Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
 # when also using the bzip2 crate
-version = "0.15.0"
+git = "https://github.com/rust-rocksdb/rust-rocksdb"
+branch = "master"
 default-features = false
-features = ["lz4"]
+features = ["lz4","snappy"]
 
 [dev-dependencies]
 assert_matches = "1.3.0"
